--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -1,1 +1,20 @@
 // bu yerda fontslar bor
+@font-face {
+  font-family: 'Inter';
+  src: url('../fonts/Inter-Regular.woff2') format('woff2'),
+      url('../fonts/Inter-Regular.woff') format('woff'),
+      url('../fonts/Inter-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Cardo';
+  src: url('../fonts/Cardo-Regular.woff2') format('woff2'),
+      url('../fonts/Cardo-Regular.woff') format('woff'),
+      url('../fonts/Cardo-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
