--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -16,7 +16,7 @@ html {
     display: flex;
     flex-direction: column;
     height: 100%;
-    // font-family: "Arial", sans-serif;
+    font-family: 'Cardo', 'Inter', serif;
     line-height: 1.5;
   }
 
