--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -1,1 +1,155 @@
 // bu yerda hero bor
+.hero {
+  background: #1B3764;
+  padding-top: 100px;
+  padding-bottom: 100px;
+
+  &__container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  &__right-desc {
+    margin: 0;
+    font-family: 'Cardo';
+    font-weight: 400;
+    font-size: 64px;
+    line-height: 78px;
+    letter-spacing: 1.3px;
+    color: #FFFFFF;
+
+    &-small {
+      margin: 0;
+      font-family: 'Cardo';
+      font-weight: 400;
+      font-size: 21px;
+      line-height: 36px;
+      letter-spacing: 1.2px;
+      text-transform: capitalize;
+      color: #FFFFFF;
+
+      &-margin {
+        margin-bottom: 34px;
+      }
+
+      &-yellow::before {
+        content: "";
+        display: inline-block;
+        width: 35px;
+        height: 2px;
+        background-image: url(../../images/line.png);
+        position: relative;
+        top: -3px;
+        margin-right: 14px;
+      }
+
+      &-btn {
+        margin-top: 24px;
+      }
+    }
+  }
+
+  &__right-button {
+    text-decoration: none;
+    font-family: 'Cardo';
+    font-weight: 400;
+    font-size: 19px;
+    line-height: 30px;
+    letter-spacing: 0.38px;
+    text-transform: capitalize;
+    color: #FFFFFF;
+    margin-left: 50px;
+    border-bottom: 2px solid #FFFFFF;
+    transition: all 0.7s;
+
+    &:hover {
+      opacity: 0.7;
+    }
+
+    &:active {
+      opacity: 0.5;
+    }
+  }
+
+  &__right-list {
+    display: flex;
+    margin: 0;
+    padding: 0;
+    margin-top: 57px;
+
+    &-desc {
+      margin: 0;
+      font-family: 'Cardo';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 24px;
+      line-height: 29px;
+      letter-spacing: 0.48px;
+      color: #FFFFFF;
+      margin-bottom: 12px;
+
+      &::before {
+        content: "";
+        display: inline-block;
+        width: 16px;
+        height: 16px;
+        background-image: url(../images/round.png);
+      }
+
+      &-small {
+        margin: 0;
+        font-family: 'Inter';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 17px;
+        line-height: 27px;
+        color: #B4C7E7;
+      }
+    }
+  }
+
+  &__right-item + &__right-item {
+    margin-left: 60px;
+  }
+
+}
+
+@media only screen and (max-width: 992px) {
+
+  .hero {
+    padding-top: 50px;
+
+    &__container {
+      flex-direction: column;
+    }
+
+    &__right {
+      margin-bottom: 50px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+
+      &-button {
+        margin-left: 0;
+        margin-top: 20px;
+      }
+    }
+
+
+  }
+
+}
+
+@media only screen and (max-width: 420px) {
+
+  .hero {
+
+    &__right-item + &__right-item {
+      margin-left: 20px;
+    }
+
+  }
+
+}
