--- a/scss/blocks/_all-blocks.scss
+++ b/scss/blocks/_all-blocks.scss
@@ -5,4 +5,8 @@
 @import 'main';
 @import 'hero';
 @import 'books';
+@import 'author';
+@import 'trust';
+@import 'copy';
+@import 'learn';
 @import 'footer';
