--- a/css/main.css
+++ b/css/main.css
@@ -12433,6 +12433,10 @@ img {
 }
 
 @media only screen and (max-width: 420px) {
+  .hero__right-desc {
+    font-size: 40px;
+    line-height: 60px;
+  }
   .hero__right-item + .hero__right-item {
     margin-left: 20px;
   }
@@ -12612,6 +12616,486 @@ img {
   }
   .books__item + .books__item {
     margin-top: 40px;
+  }
+}
+
+.author {
+  padding-top: 140px;
+  padding-bottom: 140px;
+  background: #F5F8FC;
+}
+
+.author__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.author__right {
+  max-width: 605px;
+}
+
+.author__right-heading {
+  margin: 0;
+  margin-bottom: 23px;
+  font-family: 'Cardo';
+  font-weight: 400;
+  font-size: 42px;
+  line-height: 50px;
+  text-transform: capitalize;
+  color: #1B3764;
+}
+
+.author__right-span {
+  display: inline-block;
+  width: 50px;
+  height: 3px;
+  background: #FFCA42;
+  margin-bottom: 33px;
+}
+
+.author__right-desc {
+  margin: 0;
+  margin-bottom: 34px;
+  font-family: 'Inter';
+  font-weight: 400;
+  font-size: 19px;
+  line-height: 34px;
+  color: #969AA0;
+}
+
+.author__right-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 0;
+  margin-bottom: 70px;
+  padding: 0;
+}
+
+.author__right-list-desc-number {
+  margin: 0;
+  font-family: 'Cardo';
+  font-style: normal;
+  font-size: 54px;
+  line-height: 77px;
+  color: #1B3764;
+}
+
+.author__right-list-desc {
+  margin: 0;
+  font-family: 'Inter';
+  font-style: normal;
+  font-size: 17px;
+  line-height: 22px;
+  color: #969AA0;
+}
+
+.author__right-list-span {
+  display: inline-block;
+  width: 1px;
+  height: 98px;
+  background: #FFCA42;
+  margin-left: 35px;
+}
+
+.author__right-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.author__right-man {
+  padding: 15px 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  background: #1B3764;
+  max-width: 484px;
+}
+
+.author__right-man-john-desc-name {
+  margin: 0;
+  margin-bottom: 11px;
+  font-family: 'Cardo';
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 26px;
+  color: #FFCA42;
+}
+
+.author__right-man-john-desc-email {
+  margin: 0;
+  font-family: 'Inter';
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 28px;
+  letter-spacing: 0.19px;
+  color: #B4C7E7;
+}
+
+.author__right-man-john-desc-phone {
+  margin: 0;
+  font-family: 'Inter';
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 28px;
+  letter-spacing: 0.19px;
+  color: #B4C7E7;
+}
+
+@media only screen and (max-width: 1210px) {
+  .author__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .author__right {
+    text-align: center;
+    margin-top: 30px;
+  }
+  .author__right-man {
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width: 427px) {
+  .author {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+  .author__right-man {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .author__right-man > img {
+    margin-bottom: 40px;
+  }
+}
+
+.trust {
+  padding-top: 126px;
+  padding-bottom: 130px;
+}
+
+.trust__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.trust__heading {
+  margin: 0;
+  font-family: 'Cardo';
+  font-weight: 400;
+  font-size: 42px;
+  line-height: 50px;
+  text-align: center;
+  text-transform: capitalize;
+  color: #1B3764;
+}
+
+.trust__line {
+  display: inline-block;
+  width: 50px;
+  height: 3px;
+  background: #FFCA42;
+  margin-top: 23px;
+  margin-bottom: 50px;
+}
+
+.trust__list {
+  margin: 0;
+  padding: 0;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.trust__list-heading {
+  margin: 0;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-family: 'Cardo';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 29px;
+  text-align: center;
+  color: #1B3764;
+}
+
+.trust__list-desc {
+  margin: 0;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 19px;
+  line-height: 28px;
+  text-align: center;
+  color: #969AA0;
+}
+
+.trust__item {
+  max-width: 313px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+@media only screen and (max-width: 1292px) {
+  .trust__list {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .trust__item-margin {
+    margin-top: 40px;
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  .trust__item-margin-last {
+    margin-top: 40px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .trust__item {
+    max-width: 500px;
+  }
+  .trust__item + .trust__item {
+    margin-top: 50px;
+  }
+}
+
+.copy {
+  background: #1B3764;
+  padding-top: 70px;
+  padding-bottom: 70px;
+}
+
+.copy__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.copy__heading {
+  margin: 0;
+  margin-bottom: 27px;
+  font-family: 'Cardo';
+  font-weight: 400;
+  font-size: 45px;
+  line-height: 54px;
+  text-transform: capitalize;
+  color: #FFFFFF;
+}
+
+.copy__span {
+  margin: 0;
+  width: 50px;
+  height: 3px;
+  background: #FFCA42;
+  margin-bottom: 27px;
+}
+
+.copy__desc {
+  max-width: 539px;
+  margin: 0;
+  margin-bottom: 47px;
+  font-family: 'Inter';
+  font-size: 19px;
+  line-height: 28px;
+  color: #B4C7E7;
+}
+
+.copy__btn {
+  display: inline-block;
+  padding: 19px 52px;
+  border: 2px solid #FFCA42;
+  font-family: 'Cardo';
+  font-size: 19px;
+  line-height: 28px;
+  letter-spacing: 0.38px;
+  color: #FFFFFF;
+}
+
+@media only screen and (max-width: 992px) {
+  .copy__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .copy__left {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .copy__btn {
+    margin-bottom: 60px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .copy__heading {
+    font-size: 35px;
+    line-height: 50px;
+  }
+}
+
+.learn {
+  padding-top: 136px;
+  padding-bottom: 140px;
+}
+
+.learn__top {
+  margin-bottom: 80px;
+}
+
+.learn__heading {
+  margin: 0;
+  margin-bottom: 23px;
+  font-family: 'Cardo';
+  font-size: 42px;
+  line-height: 50px;
+  text-align: center;
+  text-transform: capitalize;
+  color: #1B3764;
+}
+
+.learn__line {
+  display: inline-block;
+  margin: 0;
+  width: 50px;
+  height: 3px;
+  background: #FFCA42;
+  margin-bottom: 27px;
+  text-align: center;
+}
+
+.learn__nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.learn__list {
+  max-width: 665px;
+  margin: 0;
+  margin-right: 80px;
+  padding: 0;
+  margin: -14px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.learn__list-desc {
+  margin: 0;
+  font-family: 'Cardo';
+  font-size: 24px;
+  line-height: 34px;
+  color: #1B3764;
+}
+
+.learn__item {
+  padding: 30px 44px 60px 30px;
+  max-width: 303px;
+  background: #F4F8FF;
+  margin: 14px;
+}
+
+.learn__item > img {
+  margin-bottom: 30px;
+}
+
+@media only screen and (max-width: 1230px) {
+  .learn__nav {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .learn__nav > img {
+    margin-top: 40px;
+  }
+}
+
+@media only screen and (max-width: 769px) {
+  .learn__list {
+    max-width: 500px;
+  }
+  .learn__item {
+    max-width: 100%;
   }
 }
 /*# sourceMappingURL=main.css.map */
