--- a/scss/blocks/_copy.scss
+++ b/scss/blocks/_copy.scss
@@ -47,6 +47,15 @@
     line-height: 28px;
     letter-spacing: 0.38px;
     color: #FFFFFF;
+    transition: 0.4s;
+
+    &:hover {
+      opacity: 0.7;
+    }
+
+    &:active {
+      opacity: 0.5;
+    }
   }
 
 }
