--- a/css/main.css
+++ b/css/main.css
@@ -13332,4 +13332,166 @@ img {
             flex-direction: column;
   }
 }
+
+.reders {
+  padding-top: 120px;
+  padding-bottom: 130px;
+}
+
+.reders__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.reders__left {
+  max-width: 468px;
+  margin-right: 30px;
+}
+
+.reders__heading {
+  max-width: 329px;
+  margin: 0;
+  margin-bottom: 23px;
+  font-family: 'Cardo';
+  font-size: 42px;
+  line-height: 50px;
+  text-transform: capitalize;
+  color: #1B3764;
+}
+
+.reders__line {
+  margin: 0;
+  display: inline-block;
+  margin: 0;
+  width: 50px;
+  height: 3px;
+  background: #FFCA42;
+  margin-bottom: 33px;
+}
+
+.reders__desc {
+  max-width: 435px;
+  margin: 0;
+  margin-bottom: 14px;
+  font-family: 'Inter';
+  font-size: 19px;
+  line-height: 34px;
+  color: #969AA0;
+}
+
+.reders__line-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.reders__line-span {
+  margin-left: 10px;
+  font-family: 'Cardo';
+  font-size: 22px;
+  line-height: 26px;
+  color: #1B3764;
+}
+
+.reders__desc-small {
+  margin: 0;
+  margin-top: 10px;
+  font-family: 'Inter';
+  font-size: 18px;
+  line-height: 28px;
+  color: #1B3764;
+}
+
+.reders__list {
+  margin: 0;
+  padding: 0;
+  margin: -10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.reders__list-heading {
+  margin: 0;
+  margin-bottom: 13px;
+  font-family: 'Cardo';
+  font-size: 22px;
+  line-height: 33px;
+  color: #FFFFFF;
+}
+
+.reders__list-desc {
+  margin: 0;
+  font-family: 'Inter';
+  font-size: 18px;
+  line-height: 29px;
+  color: #B4C7E7;
+}
+
+.reders__list-top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 20px;
+}
+
+.reders__list-top-text-wrapper {
+  margin-left: 20px;
+}
+
+.reders__list-top-heading {
+  margin: 0;
+  margin-bottom: 15px;
+  font-family: 'Cardo';
+  font-size: 24px;
+  line-height: 29px;
+  color: #FFFFFF;
+}
+
+.reders__item {
+  margin: 10px;
+  padding: 30px 35px 24px 35px;
+  max-width: 381px;
+  background: #1B3764;
+  -webkit-box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.11);
+          box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.11);
+}
+
+@media only screen and (max-width: 1200px) {
+  .reders__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .reders__left {
+    max-width: 668px;
+    margin-right: 0px;
+    margin-bottom: 50px;
+  }
+  .reders__list {
+    max-width: 900px;
+  }
+}
+
+@media only screen and (max-width: 992px) {
+  .reders__list {
+    max-width: 400px;
+  }
+}
 /*# sourceMappingURL=main.css.map */
