--- a/css/main.css
+++ b/css/main.css
@@ -13494,4 +13494,152 @@ img {
     max-width: 400px;
   }
 }
+
+.articles {
+  padding-top: 126px;
+  padding-bottom: 150px;
+  background: #F4F8FF;
+}
+
+.articles__top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-bottom: 60px;
+}
+
+.articles__heading {
+  margin: 0;
+  margin-bottom: 23px;
+  font-family: 'Cardo';
+  font-size: 42px;
+  line-height: 50px;
+  text-align: center;
+  text-transform: capitalize;
+  color: #1B3764;
+}
+
+.articles__line {
+  margin: 0;
+  display: inline-block;
+  width: 50px;
+  height: 3px;
+  background: #FFCA42;
+  margin-bottom: 33px;
+  text-align: center;
+}
+
+.articles__list {
+  margin: 0;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.articles__list-text-wrapper {
+  padding: 0 30px 30px 30px;
+}
+
+.articles__list-heading {
+  margin: 0;
+  margin-top: 25px;
+  margin-bottom: 20px;
+  font-family: 'Cardo';
+  font-size: 24px;
+  line-height: 34px;
+  letter-spacing: 0.24px;
+  color: #1B3764;
+}
+
+.articles__list-desc {
+  margin: 0;
+  margin-bottom: 13px;
+  font-family: 'Inter';
+  font-size: 19px;
+  line-height: 30px;
+  color: #969AA0;
+}
+
+.articles__list-bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.articles__list-btn {
+  font-family: 'Cardo';
+  font-size: 19px;
+  line-height: 23px;
+  letter-spacing: 0.38px;
+  text-transform: capitalize;
+  color: #1B3764;
+  background-color: white;
+  border: none;
+  border-bottom: 2px solid #1B3764;
+}
+
+.articles__list-data {
+  margin: 0;
+  font-family: 'Inter';
+  font-size: 16px;
+  line-height: 26px;
+  color: #1B3764;
+}
+
+.articles__item {
+  max-width: 420px;
+  background: #FFFFFF;
+  -webkit-box-shadow: 0px 0px 13px rgba(0, 0, 0, 0.07);
+          box-shadow: 0px 0px 13px rgba(0, 0, 0, 0.07);
+  border-radius: 5px;
+}
+
+@media only screen and (max-width: 1300px) {
+  .articles__item:nth-child(3) {
+    margin-top: 50px;
+  }
+}
+
+@media only screen and (max-width: 993px) {
+  .articles__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .articles__item {
+    max-width: 668px;
+  }
+  .articles__item > img {
+    width: 668px;
+  }
+  .articles__item__item:nth-child(3) {
+    margin-top: 0px;
+  }
+  .articles__item + .articles__item {
+    margin-top: 50px;
+  }
+}
 /*# sourceMappingURL=main.css.map */
