--- a/css/main.css
+++ b/css/main.css
@@ -13642,4 +13642,168 @@ img {
     margin-top: 50px;
   }
 }
+
+.uptade {
+  padding: 120px 0;
+}
+
+.uptade__container {
+  padding-top: 96px;
+  padding-right: 150px;
+  padding-bottom: 94px;
+  padding-left: 150px;
+  background: #FFCA42;
+  -webkit-box-shadow: 0px 0px 19px rgba(0, 0, 0, 0.18);
+          box-shadow: 0px 0px 19px rgba(0, 0, 0, 0.18);
+  border-radius: 5px;
+}
+
+.uptade__top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-bottom: 50px;
+}
+
+.uptade__heading {
+  margin: 0;
+  margin-bottom: 23px;
+  font-family: 'Cardo';
+  font-size: 42px;
+  line-height: 50px;
+  text-align: center;
+  text-transform: capitalize;
+  color: #1B3764;
+}
+
+.uptade__line {
+  display: inline-block;
+  margin: 0;
+  width: 50px;
+  height: 3px;
+  background: #1B3764;
+  margin-bottom: 25px;
+}
+
+.uptade__desc {
+  max-width: 550px;
+  margin: 0;
+  font-family: 'Inter';
+  font-size: 18px;
+  line-height: 28px;
+  text-align: center;
+  color: #1B3764;
+}
+
+.uptade__input {
+  max-width: 656px;
+  width: 100%;
+  padding-top: 20px;
+  padding-right: 488px;
+  padding-bottom: 20px;
+  padding-left: 40px;
+  background: #FFFFFF;
+  border: 2px solid #DCE1E9;
+}
+
+.uptade__input::-webkit-input-placeholder {
+  font-family: 'Inter';
+  font-size: 18px;
+  line-height: 31px;
+  letter-spacing: 0.18px;
+  color: #B4C7E7;
+}
+
+.uptade__input:-ms-input-placeholder {
+  font-family: 'Inter';
+  font-size: 18px;
+  line-height: 31px;
+  letter-spacing: 0.18px;
+  color: #B4C7E7;
+}
+
+.uptade__input::-ms-input-placeholder {
+  font-family: 'Inter';
+  font-size: 18px;
+  line-height: 31px;
+  letter-spacing: 0.18px;
+  color: #B4C7E7;
+}
+
+.uptade__input::placeholder {
+  font-family: 'Inter';
+  font-size: 18px;
+  line-height: 31px;
+  letter-spacing: 0.18px;
+  color: #B4C7E7;
+}
+
+.uptade__input:focus {
+  outline: none;
+  border: 2px solid #DCE1E9;
+}
+
+.uptade__btn {
+  max-width: 328px;
+  margin-left: 16px;
+  background: #1B3764;
+  border: 2px solid #1B3764;
+  padding: 16px 120px;
+  font-family: 'Inter';
+  font-size: 18px;
+  line-height: 31px;
+  text-align: center;
+  letter-spacing: 0.18px;
+  color: #FFFFFF;
+}
+
+@media only screen and (max-width: 1307px) {
+  .uptade__heading {
+    font-size: 32px;
+    line-height: 40px;
+  }
+  .uptade__form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .uptade__input {
+    padding-right: 0px;
+  }
+  .uptade__btn {
+    margin-top: 30px;
+    padding: 10px 90px;
+  }
+}
+
+@media only screen and (max-width: 507px) {
+  .uptade__heading {
+    font-size: 20px;
+    line-height: 30px;
+  }
+  .uptade__desc {
+    font-size: 15px;
+    line-height: 20px;
+  }
+}
 /*# sourceMappingURL=main.css.map */
